style sheet added

--- a/report.tex
+++ b/report.tex
@@ -57,6 +57,18 @@ First line of institution2 address\\
 \end{abstract}
 
 %%%%%%%%% BODY TEXT
+\section{Outline}
+\begin{itemize}
+\item intro
+\item related work
+\item approach/algorithm
+\begin{itemize}
+\item two approaches to segmentation (mprat, catherio)
+\item abstraction away from pixels
+\end{itemize}
+\item experimental results
+\item conclusion
+\end{itemize}
 \section{Introduction}
 
 Please follow the steps outlined below when submitting your manuscript to
