two more test images added

--- a/report.tex
+++ b/report.tex
@@ -24,7 +24,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{\LaTeX\ Author Guidelines for CVPR Proceedings}
+\title{Breadboard to Schematic}
 
 \author{First Author\\
 Institution1\\
