future work added

--- a/report.tex
+++ b/report.tex
@@ -320,7 +320,13 @@ orientation for the breadboard to infer connectivity.
 %-------------------------------------------------------------------------
 \section{Future Work}
 
-TODO: automatically identify components
+A few additions to our tool are desired by users. First, auto-aligning the
+wires in the schematic so that the ends meet at the same point in the schematic
+is desired - this makes the schematic physically correct. Another desired
+feature is to automatically identify where components are in the original image
+without the user having to specify any inputs, and another is to automatically
+identify components such as resistors, chips, LEDs, etc. to place them
+correctly in the Eagle schematic layout.  
 
 %-------------------------------------------------------------------------
 \section{Conclusion}
