--- a/report.tex
+++ b/report.tex
@@ -331,7 +331,11 @@ correctly in the Eagle schematic layout.
 %-------------------------------------------------------------------------
 \section{Conclusion}
 
-TODO
+Knowing the space of images your tool is working under greatly improves the
+success of the tool you are building. It is important to know the advantages
+and disadvantages of your image space when designing algorithms to achieve
+vision-based goals. Transforming a circuit from the image space to the
+schematic circuit space is possible with the correct parameter tuning. 
 
 {\small
 \bibliographystyle{ieee}
