--- a/report.tex
+++ b/report.tex
@@ -423,13 +423,26 @@ this system:
 \end{itemize}
 
 %-------------------------------------------------------------------------
-\section{Conclusion}
+\section{Contributions}
 
-Knowing the space of images your tool is working under greatly improves the
-success of the tool you are building. It is important to know the advantages
-and disadvantages of your image space when designing algorithms to achieve
-vision-based goals. Transforming a circuit from the image space to the
-schematic circuit space is possible with the correct parameter tuning. 
+In conclusion, we have demonstrated a minimal working prototype of a
+system to automatically recognize breadboard circuits with user
+input. In this work, we developed and compared two separate algorithms
+for segmentation, including a novel color-following algorithm and a
+color-quantization algorithm based on connected components; we
+investigated using 3D clustering to find the main colors in the image;
+we developed infrastructure to output our intermediate representation
+of components to the Eagle format for PCB design; and we connected the
+entire end-to-end pipeline from bitmap to Eagle format in a unified
+GUI tool which interactively and responsively incorporates user input.
+
+Lessons we learned included (a) Knowing the space of images your tool
+is working under greatly improves the success of the tool you are
+building. It is important to know the advantages and disadvantages of
+your image space when designing algorithms to achieve vision-based
+goals, and (b) It is possible to transform a circuit from the image
+space to the schematic circuit space, and is likely to be even more
+effective with more sophisticated methods.
 
 {\small
 \bibliographystyle{ieee}
