--- a/report.tex
+++ b/report.tex
@@ -49,7 +49,17 @@ MIT\\
 %%%%%%%%% ABSTRACT
 \begin{abstract}
 
-TODO: Write the abstract.
+Hobbyists and circuit designers often prototype circuits using breadboard
+techniques. After the prototyping stage is complete, copying over the tweaked
+circuit into a schematic diagram is tedious. For applications that require
+precision or precise timing, this schematic diagram would be used to make a
+printed circuit board (PCB). Through this project, we propose a vision-based
+approach to segmenting a picture of a breadboard and translating it to a
+schematic diagram in the Eagle format. Through color-based methods, our results
+succeeded in translating a picture of a breadboard circuit into a schematic
+diagram of the same circuit. With more parameter tuning, the tool we built
+provides a vision-based tool for hobbyists and hardware designers to quickly
+and easily transfer their breadboards to PCB format.    
 
 \end{abstract}
 
